--- a/index.html
+++ b/index.html
@@ -60,16 +60,26 @@
     </header>
 
     <!-- Navigation -->
-    <nav id="navbar">
-      <ul>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#certifications">Certifications</a></li>
-        <li><a href="#achievements">Achievements</a></li>
-      </ul>
-    </nav>
+<nav id="navbar">
+    <div class="hamburger" onclick="toggleNavbar()">☰</div>
+    <ul id="navbar-links">
+      <li><a href="#education">Education</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#certifications">Certifications</a></li>
+      <li><a href="#achievements">Achievements</a></li>
+    </ul>
+  </nav>
+  
+  <!-- JavaScript for toggling navbar -->
+  <script>
+  function toggleNavbar() {
+    const navbarLinks = document.getElementById('navbar-links');
+    navbarLinks.style.display = navbarLinks.style.display === 'block' ? 'none' : 'block';
+  }
+  </script>
+  
 
     <!-- Main Sections -->
 
